--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,11 @@ jobs:
           cache: 'npm'
           
       - name: Install dependencies
-        run: npm ci
+        working-directory: ./project
+        run: npm install
         
       - name: Build
+        working-directory: ./project
         run: npm run build
         
       - name: Setup Pages
@@ -36,7 +38,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: './project/dist'
           
   deploy:
     environment:
