--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^11.0.8",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.0"
