--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,9 @@ jobs:
           cache: 'npm'
           
       - name: Install dependencies
-        working-directory: ./project
         run: npm install
         
       - name: Build
-        working-directory: ./project
         run: npm run build
         
       - name: Setup Pages
@@ -38,7 +36,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './project/dist'
+          path: './dist'
           
   deploy:
     environment:
